--- a/style/style.css
+++ b/style/style.css
@@ -259,7 +259,7 @@ main img{
 
 .servicosCard p{
     font-family: "roboto", sans-serif;
-    font-size: 20px;
+    font-size: 22px;
     font-weight: 500;
     color: #7a7a7a;
     margin-top: 20px;
@@ -557,6 +557,7 @@ main img{
 .contatoInfoCard h3{
     font-size: 35px;
     margin-top: 30px;
+    font-weight: 500;
 }
 
 .relacionadosContainer{
@@ -605,6 +606,59 @@ main img{
     top: 50%;
     left: 0;
 }
+
+footer{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-top: 60px;
+    background-color: #c8f1d470;
+    height: 110px;
+}
+
+footer img{
+    width: 100px;
+}
+
+.footerSocialIcons{
+    display: flex;
+    justify-content: space-between;
+}
+
+.footerSocialIcons i{
+    font-size: 22px;
+    cursor: pointer;
+    background-color: #6DE87D;
+    color: white;
+    border-radius: 50px;
+    padding: 0.6em;
+    text-align: center;
+    font-weight: 600;
+    box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.3);
+    transition: .5s;
+    margin: 0 15px;
+}
+
+.footerSocialIcons i:hover{
+    background-color: #4BC160;
+}
+
+.footerUpIcon i{
+    font-size: 30px;
+    padding: 0.65em;
+    background-color: #6DE87D;
+    color: white;
+    border-radius: 50%;
+    cursor: pointer;
+    box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.3);
+    transition: 1s;
+}
+
+.footerUpIcon i:hover{
+    background-color: #4BC160;
+    transform: rotate(360deg)
+}
+
 
 
 
@@ -657,7 +711,7 @@ main img{
         font-size: 50px;
     }
     .sobreNos p{
-        font-size: 18px;
+        font-size: 28px;
         margin-top: 20px;
     }
     .servicosContainer h2{
@@ -778,6 +832,9 @@ main img{
     .relacionados .img img{
         width: 150px;
     }
+    .footerSocialIcons{
+        display: none;
+    }
 }
 
 @media (min-width: 481px) and (max-width: 768px){
@@ -822,7 +879,7 @@ main img{
         font-size: 50px;
     }
     .sobreNos p{
-        font-size: 18px;
+        font-size: 30px;
         margin-top: 20px;
     }
     .servicosCards{
