--- a/style/style.css
+++ b/style/style.css
@@ -4,6 +4,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
 body{
@@ -31,6 +32,7 @@ header img{
     font-family: "Roboto", sans-serif;
     margin: 0px 25px;
     color: black;
+    cursor: pointer;
 }
 
 .telBtn a{
@@ -630,13 +632,14 @@ footer img{
     cursor: pointer;
     background-color: #6DE87D;
     color: white;
-    border-radius: 50px;
+    border-radius: 50%;
     padding: 0.6em;
     text-align: center;
     font-weight: 600;
     box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.3);
     transition: .5s;
     margin: 0 15px;
+    text-decoration: none;
 }
 
 .footerSocialIcons i:hover{
